--- a/Log Centralisation/Logstash.conf
+++ b/Log Centralisation/Logstash.conf
@@ -1,33 +1,32 @@
-# input from filebeat
+# This is a comment. You should use comments to describe
+# parts of your configuration.
 input {
   beats {
     port => 5044
   }
 }
 
-
-#filtering nginx access log to be fields, remove unecessary fields for lesser data
 filter {
+ translate {
+   source => "[fields][project]"
+   target => "[index_name]"
+   dictionary_path => "/etc/logstash/server_index_mapping.yml"
+   fallback => "fail"
+  }
   grok {
-    match => { "message" => "%{IPORHOST:clientip} - %{DATA:user_name} \[%{HTTPDATE:timestamp}\] \"%{WORD:http_method} %{URIPATH:request} HTTP/%{NUMBER:http_version}\" %{NUMBER:response_code:int} %{NUMBER:bytes_sent:int}" }
+     match => {
+      "message" => '%{IPORHOST:clientip} %{USER:ident} %{USER:auth} \[%{HTTPDATE:timestamp}\] "%{WORD:method} %{URIPATH:request} HTTP/%{NUMBER:httpversion}" %{NUMBER:response} %{NUMBER:bytes} "%{DATA:referrer}"'
+    }
   }
   mutate {
-    remove_field => ["input_type", "host", "cloud", "agent"]
+    remove_field => ["input_type", "host", "cloud", "agent", "ident", "log", "auth"]
   }
 }
 
 
 output {
-  if "project_name" in [tags] {
-    elasticsearch {
-      hosts => ["127.0.0.1:9200"]
-      index => "project_name-%{+YYYY.MM.dd}"
-    }
-  }
-  else {
-    elasticsearch {
-      hosts => ["127.0.0.1:9200"]
-      index => "default-index-%{+YYYY.MM.dd}"
-    }
+  elasticsearch {
+    hosts => ["127.0.0.1:9200"]
+    index => "%{[index_name]}-%{+YYYY.MM.dd}"
   }
 }
