--- a/nginx/auto_index.conf
+++ b/nginx/auto_index.conf
@@ -1,8 +1,8 @@
 server {
      listen 443 ssl http2;
         listen    [::]:443 ssl http2;
-        ssl_certificate /etc/nginx/ssl/cert.pem;
-        ssl_certificate_key /etc/nginx/ssl/key.pem;
+        ssl_certificate /etc/nginx/cert.pem;
+        ssl_certificate_key /etc/nginx/key.pem;
 
         # Ciphers suite
         ssl_prefer_server_ciphers on;
