--- a/nginx/php_nginx.conf
+++ b/nginx/php_nginx.conf
@@ -4,8 +4,8 @@ server {
         # We want to use HTTP2, so the 3 lines below is required.
         listen 443 ssl http2;
         listen    [::]:443 ssl http2;
-        ssl_certificate /etc/nginx/ssl/cert.pem;
-        ssl_certificate_key /etc/nginx/ssl/key.pem;
+        ssl_certificate /etc/nginx/cert.pem;
+        ssl_certificate_key /etc/nginx/key.pem;
 
         # Ciphers suite
         ssl_prefer_server_ciphers on;
