--- a/nginx/php_nginx.conf
+++ b/nginx/php_nginx.conf
@@ -30,6 +30,7 @@ server {
         location ~ \.php$ {
         include /etc/nginx/fastcgi.conf;
         fastcgi_pass unix:/run/php-fpm/php-fpm.sock;
+        #fastcgi_pass 127.0.0.1:9001;  #if www.conf in php-fpm listen is set to listen to port
         #fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
         fastcgi_param  APPLICATION_ENV staging;
 }
