--- a/ELK/docker-compose.yml
+++ b/ELK/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     environment:
       - xpack.security.enabled=false
       - discovery.type=single-node
+    #resource limits for the container. It sets the memory lock limit to unlimited (-1) and the maximum number of open files to 65536.
     ulimits:
       memlock:
         soft: -1
@@ -15,6 +16,7 @@ services:
       nofile:
         soft: 65536
         hard: 65536
+    #adds the capability to lock memory (IPC_LOCK)
     cap_add:
       - IPC_LOCK
     volumes:
