--- a/Sonarqube/docker-compose.yml
+++ b/Sonarqube/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     environment:
       - SONARQUBE_JDBC_URL=jdbc:postgresql://postgres:5432/sonarqube
       - SONARQUBE_JDBC_USERNAME=sonarqube
-      - SONARQUBE_JDBC_PASSWORD=${POSTGRES_SONARQUBE_PASSWORD}
+      - SONARQUBE_JDBC_PASSWORD=${POSTGRES_SONARQUBE_PASSWORD}  #env variable
     volumes:
       - sonarqube_data:/opt/sonarqube/
     networks:
