--- a/ELK/Logstash.conf
+++ b/ELK/Logstash.conf
@@ -7,7 +7,7 @@ input {
 }
 
 filter {
- translate {
+ translate { #only translate when needed to change keyword/index to other word, refer to server_index_mapping.yml
    source => "[fields][project]"
    target => "[index_name]"
    dictionary_path => "/etc/logstash/server_index_mapping.yml"
