--- a/PHP/docker-compose.yml
+++ b/PHP/docker-compose.yml
@@ -79,7 +79,7 @@ services:
       - ./web-second-1/repo4/:/app
     command: sh -c "npm install && npm run deploy"
     environment:
-      - npm_config_project=project_name   #merchant code, not sure check with FE
+      - npm_config_project=project_name   #project code, not sure check with FE
       - npm_config_env=stage             #value = stage / prod
 
   web-second-1:
@@ -95,7 +95,7 @@ services:
       - ./web-second-2/repo4/:/app/
     command: sh -c "npm install && npm run deploy"
     environment:
-      - npm_config_project=project_name    #merchant code, not sure check with FE
+      - npm_config_project=project_name    #project code, not sure check with FE
       - npm_config_env=stage             #value = dev/ stage / prod
 
   web1:
@@ -111,7 +111,7 @@ services:
       - ./web1/repo5/web:/app/
     command: sh -c "npm install && npm run deploy"
     environment:
-      - npm_config_project=project_name   #merchant code, not sure check with FE
+      - npm_config_project=project_name   #project code, not sure check with FE
       - npm_config_env=stage      #value = stage / prod
 
   web2:
@@ -127,7 +127,7 @@ services:
       - ./web2/repo5/web:/app/
     command: sh -c "npm install && npm run deploy"
     environment:
-      - npm_config_project=project_name  #merchant code, not sure check with FE
+      - npm_config_project=project_name  #project code, not sure check with FE
       - npm_config_env=stage        #value = stage / prod
 
 
