--- a/nginx/auto_index.conf
+++ b/nginx/auto_index.conf
@@ -1,32 +1,75 @@
 server {
-     listen 443 ssl http2;
-        listen    [::]:443 ssl http2;
-        ssl_certificate /etc/nginx/cert.pem;
-        ssl_certificate_key /etc/nginx/key.pem;
+    listen 80 default_server;
+    listen [::]:80 default_server;
+    server_name _;
 
-        # Ciphers suite
-        ssl_prefer_server_ciphers on;
-        ssl_ciphers ECDH+AESGCM:ECDH+AES256:ECDH+AES128:DH+3DES:!ADH:!AECDH:!MD5;
+    # Redirect all HTTP traffic to HTTPS
+    return 301 https://$host$request_uri;
+}
 
-        # Disable the older SSL protocol, we prefer TLS
-        #ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
-        ssl_protocols TLSv1.2 TLSv1.3;
+server {
+    #Default ip address return 404
+    # HTTPS configuration
+    listen 443 ssl default_server;
+    listen [::]:443 ssl default_server;
+
+    ssl_certificate /etc/nginx/ssl/22win.com-cert.pem;
+    ssl_certificate_key /etc/nginx/ssl/22win.com-key.pem;
+
+    # Ciphers suite
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers ECDH+AESGCM:ECDH+AES256:ECDH+AES128:DH+3DES:!ADH:!AECDH:!MD5;
+
+    # Disable the older SSL protocol, we prefer TLS
+    #ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
+    ssl_protocols TLSv1.2 TLSv1.3;
+
+    server_name _;
+    return 404;
+
+}
+
+server {
+    listen 443 ssl http2;
+    listen    [::]:443 ssl http2;
+    ssl_certificate /etc/nginx/ssl/22win.com-cert.pem;
+    ssl_certificate_key /etc/nginx/ssl/22win.com-key.pem;
+
+    # Ciphers suite
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers ECDH+AESGCM:ECDH+AES256:ECDH+AES128:DH+3DES:!ADH:!AECDH:!MD5;
+
+    # Disable the older SSL protocol, we prefer TLS
+    #ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
+    ssl_protocols TLSv1.2 TLSv1.3;
+
+    # Content-Security-Policy (CSP) header
+    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdnjs.cloudflare.com;";
+    # X-Frame-Options header
+    add_header X-Frame-Options "SAMEORIGIN";
+    # X-XSS-Protection header
+    add_header X-XSS-Protection "1; mode=block";
+    # X-Content-Type-Options header
+    add_header X-Content-Type-Options "nosniff";
+    # Strict-Transport-Security (HSTS) header
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+
+    #default url without /log return error.html
+    server_name log-abc.test.com;
+    root /var/www/html;
+    index error.html;
 
 
-        server_name url;
+    access_log    /var/log/nginx/access_autoindex.log;
+    error_log    /var/log/nginx/error_autoindex.log;
 
-        access_log    /var/log/nginx/access_autoindex.log;
-        error_log    /var/log/nginx/error_autoindex.log;
 
     location /log {
-        allow 1.2.3.4;  # Replace with the IP address you want to allow
-        deny all;
-        #insert user and psw to login
         auth_basic "Restricted Access";
         auth_basic_user_file /etc/nginx/.htpasswd;
-        #the exact path to show auto index/files
-        alias /storage/logs;
+        alias /var/log/log-file/;
         autoindex on;
-        autoindex_exact_size off; #show KB/MB/GB
+        autoindex_exact_size off;
     }
+
 }
