--- a/nginx/nginx_access_format.conf
+++ b/nginx/nginx_access_format.conf
@@ -1,2 +1,3 @@
+#useful for filebeat to send to logstash
 log_format custom '$remote_addr - $remote_user [$time_local] "$request" '
                        '$status $body_bytes_sent "$server_name" ';
